--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -10,8 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/homepage.css">
+    <link rel="stylesheet" href="css/footer.css">
     <script defer src="js/homepage.js"></script>
-    <title>Document</title>
+    <title>MOVIO</title>
 </head>
 <body>
   <div class="bg overlay" id="header-overlay">
@@ -19,7 +20,7 @@
       
     <div id="pageintro">               
       <article>
-        <h3 class="heading">Movie Watchlists</h3>
+        <h3 class="heading">MOVIO</h3>
         <p>Store your watchlists here.</p>
           <footer>
             <form class="d-flex" method="POST" action="/search">
