--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/css/show.css">
   <script defer src=""></script>
   <title>
-    <%= oneMovie.Title %>
+    MOVIO - <%= oneMovie.Title %>
   </title>
 </head>
 
