--- a/views/search/searchResults.ejs
+++ b/views/search/searchResults.ejs
@@ -17,7 +17,7 @@
 
     <!-- <link rel="stylesheet" href="css/homepage.css">
         <script defer src="js/homepage.js"></script> -->
-    <title>Document</title>
+    <title>MOVIO - Search Results</title>
 </head>
 
 <body>
