--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="css/index.css">
     <script defer src="js/app.js"></script>
-    <title>Document</title>
+    <title>MOVIO - Watchlist</title>
 </head>
 
 <body>
