--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/search.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script defer src="../js/search.js"></script>
-  <title>Search</title>
+  <title>MOVIO - Search</title>
 </head>
 
 <body>
