--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/homepage.css">
     <link rel="stylesheet" href="css/footer.css">
+    <script src="https://kit.fontawesome.com/91fe73862f.js" crossorigin="anonymous"></script>
     <script defer src="js/homepage.js"></script>
+    
     <title>MOVIO</title>
 </head>
 <body>
@@ -35,8 +37,8 @@
   </div>
   <div class="wrapper row1">
     <div class="section-title">
-      <h5 class="heading">Search any movie you want</h5>
-      <p>Our database is sure to include whatever you're looking for.</p>
+      <h2 class="heading">Search any movie you want</h2>
+      <h5>Our database is sure to include whatever you're looking for.</h5>
     </div>
     <div class="movie-slides-container">
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -70,8 +72,9 @@
   <div class="wrapper row2">
     <div id="recommendations" class="horizontal"> 
         <div class="section-title">
-            <h6 class="heading">Need a suggestion?</h6>
-            <p>Try one of these award-winning movies.</p>
+            <h2 class="heading">Need a suggestion?</h2>
+            <br>
+            <h5>Try one of these award-winning movies.</h5>
         </div>
         <div class="grid-wrapper">
           <div class="grid-body">
