--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -12,6 +12,7 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="https://kit.fontawesome.com/91fe73862f.js" crossorigin="anonymous"></script>
     <script defer src="js/app.js"></script>
     <title>MOVIO - Watchlist</title>
 </head>
@@ -40,6 +41,7 @@
                         <%}%>
             </div>
         </div>
+        <%- include('../partials/footer.ejs') %>
 
 
 
