--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -12,6 +12,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/navbar.css">
   <link rel="stylesheet" href="/css/show.css">
+  <script src="https://kit.fontawesome.com/91fe73862f.js" crossorigin="anonymous"></script>
   <script defer src=""></script>
   <title>
     MOVIO - <%= oneMovie.Title %>
@@ -139,9 +140,13 @@
         </div>
       </div>
       <div class="bottom-wrapper">
+        <div class="streaming-sources">
+          <h2>Where to watch <%=oneMovie.Title%></h2>
+
+        </div>
 
       </div>
-
+      <%- include('../partials/footer.ejs') %>
 
 
 
