--- a/views/search/search.ejs
+++ b/views/search/search.ejs
@@ -12,6 +12,7 @@
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/search.css">
+  <script src="https://kit.fontawesome.com/91fe73862f.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script defer src="../js/search.js"></script>
   <title>MOVIO - Search</title>
@@ -40,6 +41,7 @@
         <span class="close" onclick="searchToggle(this, event);"></span>
     </div>
   </div>
+  <%- include('../partials/footer.ejs') %>
   <!-- <form class="d-flex" method="POST" action="/search">
     <label for="search"></label>
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
