--- a/views/search/searchResults.ejs
+++ b/views/search/searchResults.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/searchResults.css">
+    <script src="https://kit.fontawesome.com/91fe73862f.js" crossorigin="anonymous"></script>
     <script defer src="../js/searchController/search_app.js"></script>
 
     <!-- <link rel="stylesheet" href="css/homepage.css">
