--- a/views/search/searchResults.ejs
+++ b/views/search/searchResults.ejs
@@ -23,6 +23,10 @@
 
 <body>
     <%- include('../partials/navbar.ejs') %>
+    <div class="title-wrapper">
+        <div class="title"><h4>Results: </h4></div>
+        
+    </div>
         <div class="grid-wrapper">
             <div class="grid-body">
                 <% for(let i=0; i < searchResults.length; i++) { %>
