--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -10,7 +10,8 @@
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="https://kit.fontawesome.com/91fe73862f.js" crossorigin="anonymous"></script>
     <script defer src="js/app.js"></script>
@@ -19,6 +20,12 @@
 
 <body>
     <%- include('../partials/navbar.ejs') %>
+        <div class="title-wrapper">
+            <div class="title">
+                <h4>Watchlist: </h4>
+            </div>
+
+        </div>
         <div class="grid-wrapper">
             <div class="grid-body">
                 <% for(let i=0; i < allMovies.length; i++) { %>
@@ -31,6 +38,11 @@
                                     <a href="/movies/<%= allMovies[i]._id  %>"><img class="movie-img rounded"
                                             src="<%=allMovies[i].Poster%>" alt=""></a>
                                 </div>
+                                <div class="context-text">
+                                    <h3 class="title">
+                                        <%=allMovies[i].Title%>
+                                    </h3>
+                                </div>
                                 <div class="close-btn">
                                     <form action="/movies/<%= allMovies[i]._id %>?_method=DELETE" method="POST">
                                         <input class="btn-close btn-close-white " aria-label="Close" type="submit">
@@ -41,17 +53,17 @@
                         <%}%>
             </div>
         </div>
-        <%- include('../partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
 
 
 
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-            integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
-            integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
-            crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+                integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+                crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+                integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+                crossorigin="anonymous"></script>
 
 </body>
 
