--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,36 +1,16 @@
 <div class="wrapper row0">
-  <div id="header-container" class="horizontal">
-    <div id="logo" class="fl-left">
-      <h1>MOVIO</h1>
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-dark fl-right">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">Home</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/movies">List</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/search">Search</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/search">Test</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/search">Test</a>
-            </li>
-
-            <!-- <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li> -->
-          </ul>
-        </div>
+  <div class="nav-row">
+      <div id="logo" >
+          <a id="logo-a" href="/"><h1>movio</h1></a>
       </div>
-    </nav>
-  </div>
+      <div class="nav">
+          <ul class="nav-items">
+              <li><a href="/movies">My List</a></li>
+              <li><a href="/search">Search</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Sign Up</a></li>
+              <li><a href="#">Log In</a></li>
+            </ul>
+      </div>
+  </div>  
 </div>
