--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -37,8 +37,11 @@
   </div>
   <div class="wrapper row1">
     <div class="section-title">
+      <div>
+        
       <h2 class="heading">Search any movie you want</h2>
-      <h5>Our database is sure to include whatever you're looking for.</h5>
+      <p>Our database is sure to include whatever you're looking for.</p>
+      </div>
     </div>
     <div class="movie-slides-container">
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -72,9 +75,9 @@
   <div class="wrapper row2">
     <div id="recommendations" class="horizontal"> 
         <div class="section-title">
-            <h2 class="heading">Need a suggestion?</h2>
+            <h2 >Need a suggestion?</h2>
             <br>
-            <h5>Try one of these award-winning movies.</h5>
+            <p>Try one of these award-winning movies.</p>
         </div>
         <div class="grid-wrapper">
           <div class="grid-body">
