--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,6 +1,11 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap');
+h4{
     font-family: 'Raleway', sans-serif;
     color:#4a4a4a;
+}
+p{
+    font-family: 'Open Santa', sans-serif;
+    color: #4a4a4a;
 }
 .row0{
     background-color: #212529;
