--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -39,7 +39,7 @@
     <div class="section-title">
       <div>
         
-      <h2 class="heading">Search any movie you want</h2>
+      <h2>Search any movie you want</h2>
       <p>Our database is sure to include whatever you're looking for.</p>
       </div>
     </div>
