--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -31,6 +31,7 @@ p{
   align-items: center;
   justify-content: center;
   display: inline-block;
+  transition: text-shadow 1s;
   
 }
 .heading:hover {
