--- a/public/css/show.css
+++ b/public/css/show.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300&display=swap');
 body{
     font-family: 'Raleway', sans-serif;
+}
+.cat{
+    font-family: 'Raleway', sans-serif;
+    font-weight: bolder;
+}
+.details{
+    font-family: 'Open Sans';
+    font-weight: lighter;
 }
 .row0{
     background-color: #212529;
@@ -87,9 +97,7 @@ iframe {
     padding: 1rem .75rem;
     border-bottom: solid 1px #aeaeae;
 }
-.cat{
-    font-weight: bolder;
-}
+
 .listEl{
     padding-right: 30%;
     padding: .25rem .75rem;
@@ -134,4 +142,3 @@ iframe {
     padding: .25rem .75rem;
     border-bottom: solid 1px #aeaeae;
 }
-
