--- a/public/css/search.css
+++ b/public/css/search.css
@@ -3,6 +3,10 @@ h4{
     font-family: 'Raleway', sans-serif;
     color:#4a4a4a;
 }
+body{
+    width:100vw;
+    height:100vh;
+}
 p{
     font-family: 'Open Santa', sans-serif;
     color: #4a4a4a;
