--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,10 +1,14 @@
 .page-footer{
-    display: flex;
-    justify-content: flex-end;
     background-color: #212529;
     color:white;
     padding: 10px 0;
-    
+    height: 15vh;
+    position:absolute;
+    bottom: 0;
+    width: 100%;
+}
+body {
+    height:100vh;
 }
 .footer-social{
     margin: 0 auto;
@@ -16,7 +20,12 @@
 }
 .i{
     color:white;
+    margin:5px;
 }
 #git{
     color: #f4f4f4;
+}
+
+a {
+    text-decoration:none;
 }
