--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -3,7 +3,7 @@
     color:white;
     padding: 10px 0;
     height: 15vh;
-    position:absolute;
+    position:relative;
     bottom: 0;
     width: 100%;
 }
