--- a/public/css/index.css
+++ b/public/css/index.css
@@ -25,12 +25,12 @@
     position: relative;
   }
   .grid-wrapper{
-      padding-top: 30px;
-      padding-bottom: 30px;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
       background-color: #1f1f1f;
   }
   .grid-body {
-    margin:20px auto;
+    margin: 10rem auto;
     display: grid;
     max-width: 70%;
     grid-template-columns: repeat(auto-fill, minmax(16%, 1fr));
