--- a/public/css/show.css
+++ b/public/css/show.css
@@ -20,7 +20,7 @@ body{
 .top-wrapper{
     background-color: #1f1f1f;
     color:white;
-    padding-bottom: 10px;
+    overflow: auto;
 }
 
 .title-header{
@@ -66,7 +66,7 @@ margin-bottom: 1rem;
 }
 .poster{
     width:33%;
-    margin-right: 20px;
+    margin-right: 1.25rem;
 }
 iframe {
     width:66%;
@@ -74,12 +74,12 @@ iframe {
     
 }
 .content-container{
-    margin:20px auto;
+    margin:1.25rem auto;
     display:flex;
     width: 60%;
     align-content: space-between;
     flex-direction: column;
-    padding-bottom: 50px;
+    padding-bottom: 3.125rem;
 }
 .genre{
     border: solid 2px;
@@ -140,24 +140,33 @@ iframe {
 .stream-wrapper{
     width: 100%;
     background-color: #1f1f1f; 
+    overflow: auto;
     
     
 }
 .rec-wrapper{
     width: 100%;
     background-color: #1f1f1f; 
+    overflow: auto;
+    height: auto;
      
 }
 .streaming-sources{
-    margin:20px auto;
+    margin:1.25rem auto;
     display:flex;
     width: 60%;
-    align-content: space-between;
     flex-direction: column;
     color:white;
 }
+.link-wrapper{
+    display: flex;
+    flex-direction: row;
+}
+.stream-links{
+    padding-right: 5%;
+}
 .rec{
-    margin:20px auto;
+    margin:1.25rem auto;
     display:flex;
     width: 60%;
     align-content: space-between;
