--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -114,8 +114,9 @@
           </div>
         </section>
       </div>
+      <div class="middle-wrapper">
       <div class="collapse" id="collapseExample">
-        <div class="middle-wrapper">
+        
           <div class="content-container">
             <div class="awards">
               <h3>
@@ -179,17 +180,19 @@
               </span>
             </div>
           </div>
-        </div>
+      </div>
       </div>
       <div class="stream-wrapper">
         <div class="streaming-sources">
           <h2>Where to watch <%=oneMovie.Title%>
           </h2>
+          <div class="link-wrapper">
           <%for (let i=0; i < apiData.streamService.length; i++) {%>
             <div class="stream-links">
-              <a href=<%=apiData.streamLinks[i].web_url%>> <%=apiData.streamService[i].name%></a>
+              <span class="stream-span"> <a href=<%=apiData.streamLinks[i].web_url%>> <%=apiData.streamService[i].name%></a></span>
             </div>
             <%}%>
+          </div>
         </div>
       </div>
       <div class="rec-wrapper">
@@ -199,20 +202,20 @@
             <h3 class="rec-title">
               <%=apiData.tdResults[i].Name%>
             </h3>
-            <p class="rec-sum">
-              <%=apiData.tdResults[i].wTeaser%>
-            </p>
-            <!-- <div class="rec-sum-con">
-              <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample%=i%>" role="button" aria-expanded="false" aria-controls="collapseExample" id="detail-btn">
-                See summary
+            <span class="rec-sum">
+              <%=apiData.tdSplit[0][i]%>
+            </span> 
+            <span class="collapse rec-sum" id="collapseExample<%=i%>">
+              <%=apiData.tdSplit[1][i]%></span>
+            <div class="rec-sum-con">
+              <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample<%=i%>" role="button" aria-expanded="false" aria-controls="collapseExample" id="detail-btn">
+                Show all
               </a>
             </div>
-            <div class="collapse" id="collapseExample %=i%>">
-              <p class="rec-sum"> %=apiData.tdResults.wTeaser%></p>
-            </div> -->
-            <%}%>
-        </div>
+           <%}%>
+           </div>
       </div>
+      
 
 
 
