--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,9 +7,9 @@
           <ul class="nav-items">
               <li><a href="/movies">My List</a></li>
               <li><a href="/search">Search</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Sign Up</a></li>
-              <li><a href="#">Log In</a></li>
+              <li><a href="/construction">About Us</a></li>
+              <li><a href="/construction">Sign Up</a></li>
+              <li><a href="/construction">Log In</a></li>
             </ul>
       </div>
   </div>  
