header/footer changes

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,29 +1,11 @@
 <footer class="page-footer">
     <div class="container">
     	<div class="row">
-            <div class="col-sm-12 footer-social">
-            	<a style="font-size: 2rem; color: #f4f4f4;" href="">
-					<i class="fab fa-google-plus-square"></i>
-				  </a>
-				  <a style="font-size: 2rem; color: #f4f4f4;" href="">
-					<i class="fab fa-twitter-square"></i>
-				  </a>
-				  <a style="font-size: 2rem; color: #f4f4f4;" href="">
-					<i class="fab fa-facebook-square"></i>
-				  </a>
-				  <a style="font-size: 2rem; color: #f4f4f4;" href="">
-					<i class="fab fa-instagram-square"></i>
-				  </a>
-				  <a style="font-size: 2rem; color: #f4f4f4;" href="">
-					<i class="fab fa-git-square"></i>
-				  </a>
-				  
-				 
-            </div>
+            
         </div>
         <div class="row">
             <div class="col-sm-12 footer-social">
-            	Website source code here:<a id="git" href="https://github.com/cotsao/project-one-movies">(╯°□°）╯︵ ┻━┻</a>.
+            	<a id="git" href="https://github.com/gregdanko92/project-one-movies">Website Source Code</a>.
             </div>
         </div>
     </div>
